# good-first-bot-rs

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  fly.toml  readme.md
.github/workflows/: ci.yml
.sqlx/: query-14abf02b47adec20769d0c13f416f6685bbfe0beadfb61874c47d5553542380b.json  query-3a3c95ba13a34777b390b2bf488523487988d68a89b9cc05cd67eea81d8f174d.json  query-3e5691bb4abbed01dd5e4d649b68003daa7f23b57bdb36beb77064d286790bc7.json  query-5b457fc81da3bd31d0bcac6c04bbd09baacdf67dc58c990efc8d0af9b88792c1.json  query-5e039a141775b1e8d5b3a64c5d6de23a6ee9139a6e454be1ff3fbe226d56b651.json  query-7a7f51867cd5666331032ea6792dd5ff8fd354cd64951bf4a26636dda8b982bb.json  query-85ef7c29a8dc71ecc3c8c596a338aea5c17908f63c9c6b2a7fecd5190928ad01.json  query-b11a188360cec9fc58f07e31a7baa44abb67b8af99dd0bba182e907d2cba413b.json  query-b23f2f3da31f2227cd85c1d72f07677aca12e983c96c192fea6b639899bd5172.json  query-d5ccb81e12c787345ae927eeee46f75115f6cf3be2133ecc3a3831304e5ce230.json  query-ddfe9d05b96bf70fa45bd1779cebb285f60fc93d8b94046208b3d3be829537a3.json  query-eff2c8c20e91e3e41d9b23330b3b48e9b64fbd975701a97fa9b2abaf8f83cdd6.json
migrations/: 0001_initial.sql  0002_create_poller_states.sql  0003_add_custom_labels_to_repositories.sql  0004_create_dialogues_table.sql
src/: bot_handler.rs  config.rs  dispatcher.rs  lib.rs  main.rs  pagination.rs  poller.rs  storage.rs
src/bot_handler/: callback_actions.rs  messaging.rs  mod.rs  test_helpers.rs  tests.rs  utils.rs
src/bot_handler/callbacks/: list.rs  mod.rs  remove.rs  toggle_label.rs  view_labels.rs  view_repo.rs
src/bot_handler/commands/: add.rs  help.rs  list.rs  mod.rs  overview.rs  remove.rs  start.rs  toggle_label.rs
src/bot_handler/services/: messaging.rs  repository.rs
src/bot_handler/services/messaging/: mod.rs
src/bot_handler/services/repository/: mod.rs  tests.rs
src/github/: github.graphql  mod.rs  schema.graphql  tests.rs
src/messaging/: keyboards.rs  mod.rs  tests.rs  utils.rs
src/poller/: mod.rs  tests.rs
src/repository/: mod.rs  tests.rs
src/storage/: memory_storage.rs  mod.rs  repo_entity.rs  repository.rs  sqlite.rs  tests.rs
