[package]
name = "good-first-bot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.13", features = ["macros"]}
dotenv = "0.15"
graphql_client = { version = "0.13", features = ["reqwest"] }
anyhow = "1.0.97"
log = "0.4.26"
env_logger = "0.11.7"
tokio-util = { version = "0.6.10", features = ["codec"] }
async-trait = "0.1.87"
lazy_static = "1.5.0"
url = "2.5.4"
chrono = "0.4.40"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
temp-env = "0.3.6"
mockall = "0.13.1"
