[package]
name = "good-first-bot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.15", features = ["macros", "sqlite-storage-rustls"] }
dotenv = "0.15"
graphql_client = { version = "0.14", features = ["reqwest"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
async-trait = "0.1.88"
lazy_static = "1.5.0"
url = "2.5.4"
chrono = "0.4.41"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "sqlite"] }
temp-env = "0.3.6"
mockall = "0.13.1"
backoff = { version = "0.4", features = ["tokio"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
futures = "0.3.31"
rand = "0.9.1"
